core/platform/cilium/in-cluster/overlays/kube-system/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: coroot.mnm-solutions.de
    name: coroot
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: mnm-solutions.de-tls
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: argocd.mnm-solutions.de
    name: argocd
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: mnm-solutions.de-tls
      mode: Terminate
  - allowedRoutes:
      namespaces:
        from: All
    hostname: grafana.mnm-solutions.de
    name: grafana
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: mnm-solutions.de-tls
      mode: Terminate
